--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
 }
+.bgdiv{
+  
+  margin-bottom: 130px;
+  
+  /*otro metodo para seleccionar parte de imagen....(1)/
+  /* width:100%;
+  height:200px;
+  overflow: hidden; */
+  
+}
+.bg {
+  position: absolute; 
+  clip: rect(50px, 1810px, 410px, 0px); /*arriba, derecha,abajo,izquierda*/
+  width: 100%;
+  height: 600px;
+  margin-top: -100px;
+  margin-left: 0px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+  /* z-index: -1;   /*...(1)jumnto con este/
+  width: 100%;
+  top: 500px;
+  margin-bottom: 500px; */
+}
+.sh{
+  
+  z-index: -2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.page-link{
+ /* border: 1px solid #dee2e6 !important; */
+ /* border: none !important; */
+ border-radius: 50% !important ;
+ overflow: hidden !important; 
+ /* background-color: rgba(22, 25, 230, 0.76) !important ; */
+ margin: 1px 1px 1px 1px !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.style-pagination{
+  position: relative;
+  display: block;
+  padding: .5rem .75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    background-color: rgba(207, 215, 246, 0.48);
+    border-radius: 10px;
 }
