--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,57 @@
   overflow: hidden; */
   
 }
+.bgfix{
+ 
+}
+@media (min-width: 550px){
+  .card-columns {
+  column-count: 2 !important;
+    }
+  }
+  @media (min-width: 850px){
+    .card-columns {
+    column-count: 3 !important;
+      }
+    }
+@media (min-width: 1100px){
+.card-columns {
+column-count: 4 !important;
+  }
+}
+@media (min-width: 1400px){
+  .card-columns {
+  column-count: 5 !important;
+    }
+  }
+  @media (min-width: 1700px){
+    .card-columns {
+    column-count: 6 !important;
+      }
+    }
+    @media (min-width: 2000px){
+      .card-columns {
+      column-count: 7 !important;
+        }
+      }
+      @media (min-width: 2300px){
+        .card-columns {
+        column-count: 8 !important;
+          }
+        }
+        @media (min-width: 2600px){
+          .card-columns {
+          column-count: 9 !important;
+            }
+          }
+          @media (min-width: 2900px){
+            .card-columns {
+            column-count: 10 !important;
+              }
+            }
 .bg {
   position: absolute; 
-  clip: rect(50px, 1810px, 410px, 0px); /*arriba, derecha,abajo,izquierda*/
+  clip: rect(50px, 23810px, 410px, 0px); /*arriba, derecha,abajo,izquierda*/
   width: 100%;
   height: 600px;
   margin-top: -100px;
