traducciones en-es 1

--- a/src/App.css
+++ b/src/App.css
@@ -98,10 +98,33 @@ column-count: 4 !important;
 }
 
 .idioma {
-  z-index: 1;
+  z-index: 2;
     display: inline-block;
     position: absolute;
     color: #000000;
     background-color: #007bff;
     border-color: #007bff;
  }
+ .paypal {
+    z-index: 1;
+    top: 35px;
+    color: #000000 !important;
+   
+    position: absolute;
+    font-size: 22px; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold; 
+    font-style: italic;
+    background-color: #FFC439 !important;
+
+ }
+ .paypal1 {color: #003087; font-size: 22px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-style: italic;}
+ .paypal2 {color: #009CDE; font-size: 22px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-style: italic;}
+.paypal3 {color: #000000; font-size: 17px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; }
+.paypal4 {color: #fafafa; font-size: 17px; font-family: Arial, Helvetica, sans-serif; }
+.myButton0a {width: 300px; background-color:#FFC439; border-radius:4px; display:inline-block; cursor:pointer; padding:12px; text-align:center; text-decoration:none; margin-bottom: 5px; }
+.myButton0a:hover {background-color:#fcba1f; }
+.myButton0a:active {position:relative; top:1px; }
+.myButton1a {width: 250px; background-color:#000000; border-radius:4px; display:inline-block; cursor:pointer; padding:12px; text-align:center; text-decoration:none; }
+.myButton1a:hover {background-color:#2b2b2b; }
+.myButton1a:active {position:relative; top:1px; }
